Domains Transfers: Fix align for labels

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/domain-transfer-domains/styles.scss
@@ -254,6 +254,7 @@
 				display: inline-block;
 				margin-bottom: 16px;
 				white-space: nowrap;
+				line-height: 24px;
 			}
 
 			@media (max-width: $break-medium ) {
